/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * Charge Created Event.
 */
syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GreenEnergyHub.Charges.Infrastructure.Integration.ChargeCreated";

message ChargeCreated {
  string charge_id = 1;// A charge identifier. Combined with Charge Owner and Charge Type it becomes unique
  ChargeType charge_type = 2;// The type of charge; tariff, fee or subscription
  string charge_owner = 3; // A charge owner identification, e.g. the Market Participant's GLN or EIC number
  string currency = 4;
  Resolution resolution = 5;
  bool tax_indicator = 6; // Indicates whether the Charge is tax or not.
  ChargePeriod charge_period = 7;
}

message ChargePeriod {
  google.protobuf.Timestamp StartDateTime = 1;
  google.protobuf.Timestamp EndDateTime = 2;
}

enum ChargeType {
  CT_UNKNOWN = 0;
  CT_SUBSCRIPTION = 1;
  CT_FEE = 2;
  CT_TARIFF = 3;
}

enum Resolution
{
  R_UNKNOWN = 0;
  R_PT15m = 1;
  R_PT1H = 2;
  R_P1D = 3;
  R_P1M = 4;
}